not sure what went wrong

--- a/daase.ran.wei/document.tex
+++ b/daase.ran.wei/document.tex
@@ -44,6 +44,11 @@
 	
 	\input{abstract}
 	
+	\input{introduction}
+	\input{background}
+	\input{problem}
+	\input{example}
+	
 	\input{occupancy}
 	
 
