--- a/daase.ran.wei/abstract.tex
+++ b/daase.ran.wei/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-Conventional genetic programming involves the 
+Instead of using dedicated function nodes in the function set of a GP problem. We introduced the concept of stochastic node, which is a versatile node that 
 \end{abstract}
