--- a/daase.ran.wei/document.tex
+++ b/daase.ran.wei/document.tex
@@ -3,6 +3,8 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 
+\usepackage{amsmath, amssymb}
+
 \usepackage{pgfplots}
 \usepackage{subfig}
 \usepackage[hidelinks]{hyperref}
