--- a/daase.ran.wei/paper1.tex
+++ b/daase.ran.wei/paper1.tex
@@ -54,7 +54,7 @@
 	\input{occupancy}
 	
 
-%	\bibliographystyle{unsrt} 
-%	\bibliography{aaaaa}  
+	\bibliographystyle{unsrt} 
+	\bibliography{paper1}  
 	
 \end{document}
