made some changes

--- a/daase.ran.wei/example.tex
+++ b/daase.ran.wei/example.tex
@@ -1,4 +1,4 @@
-\section{Symbolic Regression: Our Approach}
+\section{Symbolic Regression: Stochastic}
 With the extended symbolic regression implementation, we move on to the stochastic approach. In this approach, we introduce the concept of \emph{stochastic node}, which is a versatile node that integrates the functions \textbf{add}, \textbf{sub}. \textbf{mul} and \textbf{div} in it. An probability is associated to each of the functions so that when a stochastic node is evaluated, the function of the node is determined (randomly) by their probabilities. 
 
 \subsection{Representation}
