--- a/daase.ran.wei/problem.tex
+++ b/daase.ran.wei/problem.tex
@@ -1,4 +1,4 @@
-\section{Symbolic Regression: Example Problem}
+\section{Symbolic Regression: Deterministic}
 At first we discuss a case study which is an extended version of the multivalued symbolic regression problem provided as an tutorial for ECJ (Evolutionary Computation in Java)\footnote{\url{https://cs.gmu.edu/~eclab/projects/ecj/docs/tutorials/tutorial4/index.html}}. 
 
 \subsection{Representation}
